# CHERI-Networking

./: .gitignore  Makefile  README.md  main.c  meson.build  plugin.c  plugin.h
scripts/: record_metrics.py  run.sh  time_program.sh  vary_packet_count_cheri.sh  vary_packet_count_ipc.sh  vary_packet_count_noproc.sh  vary_packet_size_cheri.sh  vary_packet_size_ipc.sh  vary_packet_size_noproc.sh
src/: main.c  plugin.c
